--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,9 @@ en:
       monday: Monday
       first_day_of_week: Week starts on
       change_password: Change password
+      use_this_email: "You have invitations to share projects for this email address. If you want to access these projects, don't change this email address. You can change your email address once you've completed the signup process."
+      tooltips:
+        login: "You need a username to login. People will be able to find you by username. Must be all lowercase, no spaces. You can use undescores."
     new:
       title: Create an Account
       submit: Create account
@@ -108,6 +111,9 @@ en:
       invited_email: "{{inviter}} invited <b>{{email}}</b> to join the project."
       time_ago: "({{time_ago_in_words}} ago)"
       resend: Re-send invitation email
+      pending: "An email was sent to this user, but they still haven't confirmed."
+    sent:
+      email_sent: "<b>We just sent a notification email to this user with a link to accept your project invitation</b>. If they can't find the email, make sure it was not classified as spam or try a different email address. If problems persist, please contact our staff."
     pending:
       to_access_or: to access the project or 
       invited_to_join: "{{by}} has invited you to join the project {{project}}."
@@ -321,6 +327,18 @@ en:
   date:
     yesterday: Yesterday
 
+  emailer:
+    common: 
+      do_not_answer: "Do not answer to this email."
+    signup_invitation:
+      collaborate_with: "{{name}} wants to collaborate with you on Teambox:"
+      you_have_been_invited_to: "You have been invited to the project <b>{{project}}</b>"
+      accept_the_invitation: Accept the invitation to start collaborating
+      current_users: "Current users in this project:"
+      plaintext_link: "If the above link doesn't work, copy and paste the following code into your browser bar: "
+      teambox_is_a_pm_platform: "Teambox is a project management platform made for real-world collaboration."
+      plan_share_and_collaborate: "Plan, share and keep track of what's been done. Simple as it should be."
+      report_abuse: "This email was sent to you by your contact's request. Please report any abuse to abuse@teambox.com."
 
   weakling:
     default: Must be at least 5 characters
