--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -263,6 +263,8 @@ en:
   task_lists:
     fields:
       name: Name
+    link:
+      new: Task List
     index:
       add_link: New Task List
       primer:
