--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,7 +29,8 @@ en:
   users:
     fields:
       login: Username
-      name: Full Name
+      first_name: First name
+      last_name: Last name
       time_zone: Time Zone
       language: Language
       email: Email
@@ -42,6 +43,10 @@ en:
       use_this_email: "You have invitations to share projects for this email address. If you want to access these projects, don't change this email address. You can change your email address once you've completed the signup process."
       tooltips:
         login: "You need a username to login. People will be able to find you by username. Must be all lowercase, no spaces. You can use undescores."
+        first_name: Up to 20 characters.
+        last_name: Up to 20 characters.
+        email: Enter your real email so your team-mates can contact you.
+        password: "Combining letters, numbers, uppercase and lowercase is a good idea."
     forgot_password:
       title: So you forgot your password?
       email: Which email did you sign up with?
