--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,6 +53,9 @@ en:
       back: Back to Login screen
       submit: Send me a link to reset my password
     reset_password:
+      title: Reset Password
+      login_link_sent: "We just sent you an email to {{email}} so you can retrieve your password."
+      follow_the_link: "Follow the link inside this email to log into Teambox! If you can't find it, look in the spam folder."
       not_found: "The email <b>{{email}}</b> doesn't belong to any Teambox user. Maybe you mispelt it?"
       change_password_now: "You are now logged in. <b>Choose a new password now</b> so you won't forget it!"
     new:
