task and task_lists reordering, with cool button loading effect

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -276,6 +276,7 @@ en:
     link:
       new: Task List
       edit: Edit
+      reorder: Reorder
     index:
       add_link: New Task List
     primer:
