--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -107,17 +107,17 @@ en:
       projects: My Projects
       subscribe: Subscribe to the news feed
       new_project: New Project
-      primer:
-        empty: You don't own or belong to any projects yet.
-        create_first: Create your first project!
-        define1: "Use projects to <b>collaborate</b> with groups of people: A website, organizing a party, client work..."
-        define2: "You can create <b>as many projects as you wish</b> to share with different users online."
-        item1: "<b>Create a project</b>, name it and <b>invite some contacts</b> to it."
-        item2: "<b>Comment</b> about what you're doing at each moment in the general timeline."
-        item3: "<b>Discuss</b> about important decisions with Conversations."
-        item4: "<b>Plan</b> what needs to be done and post updates with Tasks."
-        item5: "<b>Share information</b> by easily editable Pages for each project."
-        footer: "Projects are a centralized way of collaborating, so you'll never need to email your team again."
+    primer:
+      empty: You don't own or belong to any projects yet.
+      create_first: Create your first project!
+      define1: "Use projects to <b>collaborate</b> with groups of people: A website, organizing a party, client work..."
+      define2: "You can create <b>as many projects as you wish</b> to share with different users online."
+      item1: "<b>Create a project</b>, name it and <b>invite some contacts</b> to it."
+      item2: "<b>Comment</b> about what you're doing at each moment in the general timeline."
+      item3: "<b>Discuss</b> about important decisions with Conversations."
+      item4: "<b>Plan</b> what needs to be done and post updates with Tasks."
+      item5: "<b>Share information</b> by easily editable Pages for each project."
+      footer: "Projects are a centralized way of collaborating, so you'll never need to email your team again."
     show:
       update_your_status: "Update your status..."
       invite_people: 'Invite people...'
@@ -129,7 +129,7 @@ en:
       name_description: "Choose a brief and descriptive title. For example: Taggart Transcontinental"
       permalink: URL
       permalink_description: "This will be the web address for your project. Keep it as short as possible. No spaces allowed."
-      permalink_prefix: http://teambox.com/
+      permalink_prefix: http://teambox.com/projects/
     new:
       title: Create a Project
       submit: Create project and start inviting people
@@ -180,7 +180,7 @@ en:
       title: New Conversation
       submit: Create
       add_suscribers: Which people will be watching this conversation?
-      subscribe_note: These people will be notified via email of this message and any following comments.<br/>They can unsuscribe at any moment.
+      subscribe_note: These people will be notified via email of this message and any following comments.<br/>They can unsubscribe at any moment.
     index:
       primer:
         empty: This project doesn't have any conversations yet.
@@ -274,7 +274,7 @@ en:
     fields:
       name: Name
     link:
-      new: Task List
+      new: New Task List
       edit: Edit
       reorder: Reorder
     index:
