--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -181,6 +181,8 @@ en:
       submit: Create
       add_suscribers: Which people will be watching this conversation?
       subscribe_note: These people will be notified via email of this message and any following comments.<br/>They can unsubscribe at any moment.
+      invite_users: You are the only user in this project!
+      no_users_yet: "Conversations are more useful when shared. <a href='{{invite_link}}'>Invite some users</a> to this project now so they can access this conversation, answer and receive updates."
     index:
       primer:
         empty: This project doesn't have any conversations yet.
