--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  latest_announcement: "This is a <b>testing server</b>, which means that it's used exclusively to test new features before Teambox 2.0 is officially released.<br/><br/>All the data in this server will be destroyed. Don't use it for real-world purposes."
   common:
     and: and
     or: or
@@ -11,6 +12,8 @@ en:
     decline: Decline
     people_watching: "People watching this item: "
     nobody_watching: "Nobody is watching this."
+    cancel: Cancel
+    save: Save
   confirm:
     delete_task_list: Are you sure you want to delete this task list?
     delete_task: Are you sure you want to delete this task?
@@ -22,10 +25,19 @@ en:
       create_task_list: created the task list
       create_page: created the page
       create_person: added to the project
+    user_remove:
+      removed_from_project: {{user}} was removed from this project
+    user_add:
+      added_to_project: {{user}} was added to this project    
   avatars:
+    new:
+      title: Upload an avatar
+      upload: Upload
     edit:
       upload_new_image: Upload a new image for your avatar
       upload: Upload this avatar
+    show:
+      save: Save Changes
   users:
     fields:
       login: Username
@@ -40,6 +52,7 @@ en:
       monday: Monday
       first_day_of_week: Week starts on
       change_password: Change password
+      confirm_password: Confirm password
       use_this_email: "You have invitations to share projects for this email address. If you want to access these projects, don't change this email address. You can change your email address once you've completed the signup process."
       tooltips:
         login: "You need a username to login. People will be able to find you by username. Must be all lowercase, no spaces. You can use undescores."
@@ -82,8 +95,9 @@ en:
       projects: Projects
       recent_activity_for: Recent activity for {{user_name}}
       vcard: Download vCard
-    user_card:
+    user:
       formatted_address: "{{street}}, {{city}} ({{country}})"
+      remove_from_project: Remove from Project
     welcome:
       get_started: Get started with Teambox!
       intro1: "You're our newest member! You'll soon see how Teambox can become your day's starting point."
@@ -101,6 +115,20 @@ en:
         in_your_site: in your site!
         tell_us: "If you enjoy using Teambox, also consider <a href='mailto:{{address}}'>telling us about it</a> in an email!"
       stop_welcome: Stop showing this Welcome tab
+    unconfirmed_email:
+      title: Confirm your email
+      invitation_sent_to: "An email invitation was sent to <i>{{email}}</i>, in order to verify your email address."
+      follow_the_link: Please <b>open this email and follow the link inside it</b> to activate your account.
+      problems: Problems?
+      resend: "Can't find the email? Press <a href='{{link}}'>here</a> to re-send the activation email."
+      spam: "Make sure the email wasn't classified as spam by your email client."
+      wrong_address: "Wrong address? If you mistyped your email address, <a href='{{link}}'>cancel the signup process</a> and re-create your account with a valid address."
+      problems: "If you're still having problems, please contact <a href='mailto:{{email}}'>{{email}}</a>"
+    profile_completeness:
+      title: Profile Completion
+      complete_your_profile: Complete your profile so your team can keep in touch with your contact information!
+      completeness: "{{percentage}}% complete"
+      to_get_to: to get to
   projects:
     index:
       title: News feed for all your projects
@@ -210,6 +238,9 @@ en:
   tasks:
     fields:
       name: Name
+      assigned_to: "Assigned to:"
+    header:
+      assigned_to: "Assigned to {{user}}"
     edit:
       submit: Update Task
     new:
@@ -220,6 +251,8 @@ en:
     link:
       new: + Add Task
       edit: Edit
+    destroy_message:
+      deleted: "The Task called <b>{{name}}</b> was successfully deleted!"      
   notes:
     actions:
       delete_confirm: Are you sure you want to delete this note?
@@ -227,6 +260,9 @@ en:
       submit: Add Note
     edit:
       submit: Update Note
+    fields:
+      title: Title
+      body: Body
   dividers:
     actions:
       delete_confirm: Are you sure you want to delete this divider?
@@ -303,9 +339,13 @@ en:
       new_task_list: New Task List
     show:
       title: "Task List: {{name}}"
+    destroy_message:
+      deleted: "The Task List called <b>{{name}}</b> was successfully deleted!"
   people:
     index:
       enter_username_or_email: "Enter your teammate's username or email:"
+      invite_people: Invite people to this project
+      invite: Search and invite
     person_list:
       confirm_delete: Are you sure you want to remove this person from the project?
   comments:
@@ -323,6 +363,10 @@ en:
       select_a_file: Select a file
     index:
       new_file: Upload a File
+    new_upload:
+      select_file: Select file
+      description: Description <i>(optional)</i>
+      upload: Upload file
     primer:
       empty: This project doesn't have any files yet.
       create_first: Upload the first file to this project!
@@ -331,6 +375,8 @@ en:
       item1: "<b>Bigger files</b>. Upload files of any size and forget about email limitations."
       item2: "<b>Versioning</b>. Upload new versions of a file and keep track of changes."
       item3: "<b>Always available</b>. Files stay in context in the project for future reference."      
+    upload:
+      uploaded_a_file: "uploaded a file:"
   sessions:
     fields:
       username_or_email: Username or email
@@ -393,7 +439,29 @@ en:
       teambox_is_a_pm_platform: "Teambox is a project management platform made for real-world collaboration."
       plan_share_and_collaborate: "Plan, share and keep track of what's been done. Simple as it should be."
       report_abuse: "This email was sent to you by your contact's request. Please report any abuse to abuse@teambox.com."
-
+    confirm:
+      hey: "Hey, {{user_name}}!"
+      follow_the_link: "In order to <b>complete your signup</b> for Teambox, we need you to log in by clicking here:"
+      log_in: "Log into Teambox now!"
+      plaintext_link: "If this doesn't work, copy and paste the following link in your browser's bar:"
+      report_abuse: "You receive this message because you signed up for a Teambox account with {{email}}"
+      problems: "If you have any problems, please contact us at <a href='http://teambox.tenderapp.com'>http://teambox.tenderapp.com</a>"
+    reset_password:
+      hey: "Hey, {{user_name}}!"
+      follow_the_link: "In order to <b>set a new password</b> for Teambox, we need you to log in with the following link:"
+      log_in: "Log into Teambox now!"
+      plaintext_link: "If this doesn't work, copy and paste the following link in your browser's bar:"
+      report_abuse: "You receive this message because you signed up for a Teambox account with {{email}}"
+      problems: "If you have any problems, please contact us at <a href='http://teambox.tenderapp.com'>http://teambox.tenderapp.com</a>"
+    notify_conversation:
+      project: "Teambox Project:"
+      file: "File:"
+      uploaded_by: uploaded by
+      view_online: "You can <a href='{{link}}'>view this conversation online</a> to answer and attach files."
+      reply: "You can also answer to this email to post a reply in the conversation."
+      are_watching: " are suscribed to this conversations, and will be notified of future replies."
+      notification_settings: "You can <a href='{{stop_watching_url}}'>stop watching this conversation</a> or change your <a href='{{notification_settings_url}}'>notification settings</a>."
+    
   weakling:
     default: Must be at least 5 characters
     error: too short
