--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -399,7 +399,7 @@ es:
       overview: Resumen
       all_conversations: Mis conversaciones
       conversations: Conversaciones
-      task_lists: Listas de Tareas
+      task_lists: Tareas
       all_task_lists: Mis listas de tareas
       project_settings: Opciones
       all_pages: Mis páginas
