--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -46,7 +46,7 @@ es:
     sent:
       title: Restablecer contraseña
       login_link_sent: "Te hemos enviado un email a {{email}} para que puedas cambiar tu contraseña."
-      follow_the_link: "Sigue el enlace del email para entrar a Teambox! Si no lo encuentras, asegúrate de que no esté en la carp
+      follow_the_link: "Sigue el enlace del email para entrar a Teambox! Si no lo encuentras, asegúrate de que no esté en la carpeta de correo no deseado. "
       not_found: "El email <b>{{email}}</b> no pertenece a ningún usuario de Teambox. Quizá lo hayas escrito mal."
       change_password_now: "Bienvenido de nuevo! Es el momento de <b>escoger una nueva contraseña</b> que no olvidarás."
   users:
